--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,11 @@ body {
 .header {
   background-color: var(--main-color);
   /* background-color: #4caf50; */
-  padding: 20px;
+  height: 60px;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
   color: white;
 }
@@ -30,6 +34,13 @@ body {
 .header__title {
   margin: 0;
   font-size: 24px;
+}
+
+.header__admin-avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #ccc;
 }
 
 .form-wrapper {
