--- a/css/style.css
+++ b/css/style.css
@@ -90,10 +90,18 @@ body {
 
 .form__input {
   width: calc(100% - 20px);
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 3px;
+}
+
+#login-input {
+  margin-bottom: 10px;
+}
+
+.flipped .form__input {
+  margin-bottom: 10px;
 }
 
 .form__input:focus {
@@ -116,6 +124,14 @@ body {
 
 .form__button:hover {
   background-color: var(--hover-color);
+}
+
+.form__error {
+  margin-top: 5px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  color: red;
+  height: 15px;
 }
 
 .toggle-button {
